Auth updated , Jwt filters updated